adjust auth and data limits with backend service
